Bug 604314 - "ASSERTION: unexpected disconnected nodes"; r,a=roc